# cram-ai4hri

./: .gitignore
cram_common/cram_agent_interaction/: CMakeLists.txt  cram-agent-interaction.asd  package.xml
cram_common/cram_agent_interaction/src/: agent-knowledge.lisp  dt-cubes copy.lisp  dt-cubes.lisp  dt-events.lisp  dt-init.lisp  interaction-knowledge.lisp  message-knowledge.lisp  notes  object-knowledge.lisp  package.lisp  ros-interface.lisp  tmp  understand.lisp
cram_core/cram_designators/: cram-designators.asd
cram_core/cram_designators/src/cram-designators/: agent-designator.lisp  interaction-designator.lisp  message-designator.lisp  package.lisp
cram_demos/cram_pepper_dt_demo/: CMakeLists.txt  README.md  cram-pepper-dt-demo.asd  package.xml
cram_demos/cram_pepper_dt_demo/src/: action-designators.lisp  demo-dt.lisp  discourse-pepper.lisp  init.lisp  interaction-actions.lisp  interaction-designators.lisp  motion-designators.lisp  package.lisp  process-modules.lisp
cram_external_interfaces/cram_ontologenius/: CMakeLists.txt  cram-ontologenius.asd  package.xml
cram_external_interfaces/cram_ontologenius/src/: action-client.lisp  client-base.lisp  individual-client.lisp  manager-client.lisp  ontologies-manipulator.lisp  ontology-client.lisp  ontology-manipulator.lisp  package.lisp
cram_pepper/: README.md
cram_pepper/cram_pepper/: CMakeLists.txt  package.xml
cram_pepper/cram_pepper_low_level/: CMakeLists.txt  cram-pepper-low-level.asd  cram-pr2-low-level.asd  package.xml
cram_pepper/cram_pepper_low_level/src/: arm.lisp  base.lisp  head.lisp  init.lisp  interaction-services.lisp  package.lisp  scan-action.lisp  speech.lisp
cram_pepper/cram_pepper_process_modules/: CMakeLists.txt  cram-pepper-process-modules.asd  package.xml
cram_pepper/cram_pepper_process_modules/src/: package.lisp  process-modules.lisp
cram_robot_descriptions/cram_pepper_description/src/: general-knowledge.lisp  package.lisp
