<package format="2">
  <name>cram_pepper_low_level</name>
  <version>0.7.0</version>
  <description>
     cram_pepper_low_level
  </description>
  <author>Mona Abdel-Keream</author>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roslisp</depend>
  <depend>roslisp_utilities</depend>
  <depend>cl_transforms</depend>
  <depend>cl_transforms_stamped</depend>
  <depend>cl_tf</depend>
  <depend>actionlib_lisp</depend>
  <depend>yason</depend>
  <depend>alexandria</depend>
  <depend>cram_language</depend>
  <depend>cram_tf</depend>
  <depend>cram_utilities</depend>
  <depend>cram_prolog</depend>
  <depend>cram_robot_interfaces</depend>
  <depend>cram_pepper_description</depend>
  <depend>cram_common_failures</depend>
  <depend>cram_simple_actionlib_client</depend>
</package>
